Adds basic HTML skeleton

--- a/index.html
+++ b/index.html
@@ -9,7 +9,31 @@
 </head>
 
 <body>
-
+    <header>
+        <h1 class="title">Intention Timer</h1>
+    </header>
+    <h2>New Activity</h2>
+    <main class="site-left">
+        <section class="site-left-box">
+            <h3>Select A Category</h3>
+            <input type="button" src="" value="Study">
+            <input type="button" src="" value="Meditate">
+            <input type="button" src="" value="Exercise">
+            <form class="site-left-form">
+                <label for="What would you like to accomplish during this time?"></label>
+                <input type="text">
+                <label for="Minutes"></label>
+                <input type="text">
+                <label for="Seconds"></label>
+                <input type="text">
+                <input type="button" value="START ACTIVITY">
+            </form>
+        </section>
+        <main class="site-right">
+            <h2>Past Activities</h2>
+            <p>You haven't logged any activities yet. Complete the form to the left to get started!</p>
+        </main>
+    </main>
 </body>
 
 </html>
