--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400&display=swap" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
+    <title>Intention Timer</title>
 </head>
 
 <body>
     <header>
         <h1 class="title">Intention Timer</h1>
     </header>
-    <h2>New Activity</h2>
-    <main class="site-left">
+    <main class="site-left-main">
+        <h2>New Activity</h2>
         <section class="site-left-box">
             <h3>Select A Category</h3>
             <input type="button" src="" value="Study">
@@ -29,10 +31,10 @@
                 <input type="button" value="START ACTIVITY">
             </form>
         </section>
-        <main class="site-right">
-            <h2>Past Activities</h2>
-            <p>You haven't logged any activities yet. Complete the form to the left to get started!</p>
-        </main>
+    </main>
+    <main class="site-right-main">
+        <h2>Past Activities</h2>
+        <p>You haven't logged any activities yet. Complete the form to the left to get started!</p>
     </main>
 </body>
 
