Added styling and images

--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
         <h2>New Activity</h2>
         <section class="site-left-box">
             <h3>Select A Category</h3>
-            <input type="button" src="" value="Study">
-            <input type="button" src="" value="Meditate">
-            <input type="button" src="" value="Exercise">
+            <div class="category-buttons">
+              <input class="study-button" type="button" src="assets/study.svg" value="Study">
+              <input class="meditate-button" type="button" src="assets/meditate.svg" value="Meditate">
+              <input class="exercise-button" type="button" src="assets/exercise.svg" value="Exercise">
+            </div>
             <form class="site-left-form">
                 <label for="What would you like to accomplish during this time?"></label>
                 <input type="text">
