Fixing overall format

--- a/index.html
+++ b/index.html
@@ -17,24 +17,26 @@
     <main class="site-left-main">
         <h2>New Activity</h2>
         <section class="site-left-box">
-            <h3>Select A Category</h3>
+            <h3>Select A Category:</h3>
             <form class="site-left-form">
               <div class="category-buttons">
-                <input class="study-button" type="button" src="/assets/study.svg" value="Study">
-                <input class="meditate-button" type="button" src="/assets/meditate.svg" value="Meditate">
-                <input class="exercise-button" type="button" src="/assets/exercise.svg" value="Exercise">
+                <input class="study-button" type="button" src="assets/study.svg" value="Study">
+                <input class="meditate-button" type="button" src="assets/meditate.svg" value="Meditate">
+                <input class="exercise-button" type="button" src="assets/exercise.svg" value="Exercise">
               </div>
               <div class="what-question">
                 <label for="question">What would you like to accomplish during this time?</label>
                 <input class="question" type="text">
               </div>
-              <div class="minutes-seconds">
+              <div class="minutes-column">
                 <label for="minutes">Minutes</label>
                 <input class="minutes" type="text">
+              </div>
+              <div class="seconds-column">
                 <label for="seconds">Seconds</label>
                 <input class="seconds" type="text">
               </div>
-                <input type="button" value="START ACTIVITY">
+                <input class="start-button" type="button" value="START ACTIVITY">
             </form>
         </section>
     </main>
