Fixed activity box and fine tuned activity buttons, also changed text size on inputs

--- a/index.html
+++ b/index.html
@@ -48,10 +48,12 @@
         <h2 class="past-activities">Past Activities</h2>
         <p class="site-right-activities">You haven't logged any activities yet. Complete the form to the left to get started!</p>
         <div class="activity-box">
-            <p class="activity-name">Study</p>
+            <div class="activity-box-top">
+                <p class="activity-name">Study</p>
+                <div class="color-tab"> . </div>
+            </div>
             <p class="activity-time">15 Mins</p>
             <p class="activity-description">Who the hell studies for just 15 mins?</p>
-            <div class="color-tab"> .</div>
         </div>
     </main>
 </body>
