--- a/index.html
+++ b/index.html
@@ -25,18 +25,22 @@
                       <input class="meditate-button top-buttons" type="button" src="assets/meditate.svg" value="Meditate">
                       <input class="exercise-button top-buttons" type="button" src="assets/exercise.svg" value="Exercise">
                   </div>
+                  <p class="category-error"><img class="error-image" src = "assets/warning.svg"/> A category selection is required.</p>
                   <div class="what-question">
                       <label for="question">What would you like to accomplish during this time?</label>
                       <input class="question" type="text">
+                      <p class="description-error"><img class="error-image" src = "assets/warning.svg"/> A description is required.</p>
                   </div>
                   <div class="minutes-seconds-row">
                       <div class="minutes-column">
                           <label for="minutes">Minutes</label>
-                          <input class="minute" type="text">
+                          <input class="minutes" type="text">
+                          <p class="minutes-error"><img class="error-image" src = "assets/warning.svg"/> A length is required.</p>
                       </div>
                       <div class="seconds-column">
                           <label for="seconds">Seconds</label>
                           <input class="seconds" type="text">
+                          <p class="seconds-error"><img class="error-image" src = "assets/warning.svg"/> A length is required.</p>
                       </div>
                   </div>
                   <input class="start-button" type="button" value="Start Activity">
