--- a/index.html
+++ b/index.html
@@ -12,54 +12,54 @@
 
 <body>
     <header>
-        <h1 class="title">Intention Timer</h1>
+        <h1 class="header-title">Intention Timer</h1>
     </header>
-    <section class="main-content">
-        <main class="site-left-main">
+    <main class="full-content">
+        <section class="site-left-main">
             <h2 class="new-activity">New Activity</h2>
             <section class="site-left-box">
                 <h3>Select A Category:</h3>
                 <form class="site-left-form">
                     <div class="category-buttons">
-                        <input class="study-button top-buttons" type="button" src="assets/study.svg" value="Study">
-                        <input class="meditate-button top-buttons" type="button" src="assets/meditate.svg" value="Meditate">
-                        <input class="exercise-button top-buttons" type="button" src="assets/exercise.svg" value="Exercise">
+                        <input class="study-button" type="button" src="assets/study.svg" value="Study">
+                        <input class="meditate-button" type="button" src="assets/meditate.svg" value="Meditate">
+                        <input class="exercise-button" type="button" src="assets/exercise.svg" value="Exercise">
                     </div>
                     <p class="category-error"><img class="error-image" src="assets/warning.svg" /> A category selection is required.</p>
-                    <div class="what-question">
-                        <label for="question">What would you like to accomplish during this time?</label>
-                        <input class="question" type="text">
+                    <div class="activity">
+                        <label for="activity-input">What would you like to accomplish during this time?</label>
+                        <input class="activity-input" type="text">
                         <p class="description-error"><img class="error-image" src="assets/warning.svg" /> A description is required.</p>
                     </div>
                     <div class="minutes-seconds-row">
                         <div class="minutes-column">
-                            <label for="minutes">Minutes</label>
-                            <input class="minutes" type="text">
+                            <label for="minutes-input">Minutes</label>
+                            <input class="minutes-input" type="text">
                             <p class="minutes-error"><img class="error-image" src="assets/warning.svg" /> A length is required.</p>
                         </div>
                         <div class="seconds-column">
-                            <label for="seconds">Seconds</label>
-                            <input class="seconds" type="text">
+                            <label for="seconds-input">Seconds</label>
+                            <input class="seconds-input" type="text">
                             <p class="seconds-error"><img class="error-image" src="assets/warning.svg" /> A length is required.</p>
                         </div>
                     </div>
-                    <input class="start-button" type="button" value="Start Activity">
+                    <input class="start-activity-button" type="button" value="Start Activity">
                 </form>
             </section>
-        </main>
-        <main class="site-right-main">
+        </section>
+        <section class="site-right-main">
             <h2 class="past-activities">Past Activities</h2>
             <p class="site-right-activities">You haven't logged any activities yet. Complete the form to the left to get started!</p>
-            <div class="activity-box">
+            <div class="past-activity-box">
                 <div class="activity-box-top">
-                    <p class="activity-name">Study</p>
+                    <p class="past-activity-name">Study</p>
                     <div class="color-tab"> . </div>
                 </div>
-                <p class="activity-time">15 Mins</p>
-                <p class="activity-description">Who the hell studies for just 15 mins?</p>
+                <p class="past-activity-time">15 Mins</p>
+                <p class="past-activity-description">Who the hell studies for just 15 mins?</p>
             </div>
-        </main>
-    </section>
+        </section>
+    </main>
 
 </body>
 <script src="main.js"></script>
