Adds some functioning to the error messages

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <div class="activity">
                         <label for="activity-input">What would you like to accomplish during this time?</label>
                         <input class="activity-input" type="text">
-                        <p class="description-error"><img class="error-image" src="assets/warning.svg" /> A description is required.</p>
+                        <p class="activity-error"><img class="error-image" src="assets/warning.svg" /> A description is required.</p>
                     </div>
                     <div class="minutes-seconds-row">
                         <div class="minutes-column">
