Min and second inputs can only accept numbers

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                             <label for="minutes-input">Minutes</label>
                             <input class="minutes-input" type="text">
                             <p class="minutes-error"><img class="error-image" src="assets/warning.svg" /> A length is required.</p>
+                            <p class="num-error"></p>
                         </div>
                         <div class="seconds-column">
                             <label for="seconds-input">Seconds</label>
