--- a/index.html
+++ b/index.html
@@ -51,14 +51,7 @@
         <section class="site-right-main">
             <h2 class="past-activities">Past Activities</h2>
             <p class="site-right-activities">You haven't logged any activities yet. Complete the form to the left to get started!</p>
-            <div class="past-activity-box">
-                <div class="activity-box-top">
-                    <p class="past-activity-name">Study</p>
-                    <div class="color-tab"> . </div>
-                </div>
-                <p class="past-activity-time">15 Mins</p>
-                <p class="past-activity-description">Who the hell studies for just 15 mins?</p>
-            </div>
+            <div class="new-cards"></div>
         </section>
     </main>
 
