--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     <section class="site-right-main">
       <h2 class="past-activities">Past Activities</h2>
       <p class="site-right-activities">You haven't logged any activities yet. Complete the form to the left to get started!</p>
+      <div class="new-cards"></div>
     </section>
   </main>
 </body>
